versioned_docs/version-5.4/indexes/using-term-vectors.mdx
---
title: "Indexes: Term Vectors"
hide_table_of_contents: true
sidebar_label: Term Vectors
sidebar_position: 27
---

import Admonition from '@theme/Admonition';
import Tabs from '@theme/Tabs';
import TabItem from '@theme/TabItem';
import CodeBlock from '@theme/CodeBlock';
import LanguageSwitcher from "@site/src/components/LanguageSwitcher";
import LanguageContent from "@site/src/components/LanguageContent";

export const supportedLanguages = ["java", "nodejs", "csharp"];


# Indexes: Term Vectors
<LanguageSwitcher supportedLanguages={supportedLanguages} />
<LanguageContent language="java">


[Term Vector](https://en.wikipedia.org/wiki/Vector_space_model) is a representation of a text document as a vector of identifiers that can be used for similarity searches, information filtering, information retrieval, and indexing. In RavenDB the feature like [MoreLikeThis](../client-api/session/querying/how-to-use-morelikethis.mdx) is leveraging the term vectors to accomplish its purposes.

To create an index and enable Term Vectors on a specific field we can create an index using  the `AbstractIndexCreationTask`, then specify the term vectors there, or define our term vectors in the `IndexDefinition` (directly or using the `IndexDefinitionBuilder`).

<Tabs groupId='languageSyntax'>
<TabItem value="AbstractIndexCreationTask" label="AbstractIndexCreationTask">
<CodeBlock language="java">
{`public static class BlogPosts_ByTagsAndContent extends AbstractIndexCreationTask {
    public BlogPosts_ByTagsAndContent() {
        map = "docs.Posts.Select(post => new { " +
            "    Tags = post.Tags, " +
            "    Content = post.Content " +
            "})";

        index("Content", FieldIndexing.SEARCH);
        termVector("Content", FieldTermVector.WITH_POSITIONS_AND_OFFSETS);
    }
}
`}
</CodeBlock>
</TabItem>
<TabItem value="Operation" label="Operation">
<CodeBlock language="java">
{`IndexDefinitionBuilder builder = new IndexDefinitionBuilder("BlogPosts/ByTagsAndContent");
builder.setMap("docs.Posts.Select(post => new { " +
    "    Tags = post.Tags, " +
    "    Content = post.Content " +
    "})");

builder.getIndexesStrings().put("Content", FieldIndexing.SEARCH);
builder.getTermVectorsStrings().put("Content", FieldTermVector.WITH_POSITIONS_AND_OFFSETS);

IndexDefinition indexDefinition = builder.toIndexDefinition(store.getConventions());

store.maintenance().send(new PutIndexesOperation(indexDefinition));
`}
</CodeBlock>
</TabItem>
</Tabs>

The available Term Vector options are:

<TabItem value="term_vectors_3" label="term_vectors_3">
<CodeBlock language="java">
{`public enum FieldTermVector \{
    /**
     * Do not store term vectors
     */
    NO,

    /**
     * Store the term vectors of each document. A term vector is a list of the document's
     * terms and their number of occurrences in that document.
     */
    YES,
    /**
     * Store the term vector + token position information
     */
    WITH_POSITIONS,
    /**
     * Store the term vector + Token offset information
     */
    WITH_OFFSETS,

    /**
     * Store the term vector + Token position and offset information
     */
    WITH_POSITIONS_AND_OFFSETS
\}
`}
</CodeBlock>
</TabItem>


</LanguageContent>
<LanguageContent language="nodejs">


[Term Vector](https://en.wikipedia.org/wiki/Vector_space_model) is a representation of a text document as a vector of identifiers that can be used for similarity searches, information filtering, information retrieval, and indexing. In RavenDB the feature like [MoreLikeThis](../client-api/session/querying/how-to-use-morelikethis.mdx) is leveraging the term vectors to accomplish its purposes.

To create an index and enable Term Vectors on a specific field we can create an index using  the `AbstractIndexCreationTask`, then specify the term vectors there, or define our term vectors in the `IndexDefinition` (directly or using the `IndexDefinitionBuilder`).

<Tabs groupId='languageSyntax'>
<TabItem value="AbstractIndexCreationTask" label="AbstractIndexCreationTask">
<CodeBlock language="js">
{`class BlogPosts_ByTagsAndContent extends AbstractIndexCreationTask {
    constructor() {
        super();

        this.map = \`docs.Posts.Select(post => new {     
            tags = post.tags,     
            content = post.content 
        })\`; 

        this.index("content", "Search");
        this.termVector("content", "WithPositionsAndOffsets");
    }
}
`}
</CodeBlock>
</TabItem>
<TabItem value="Operation" label="Operation">
<CodeBlock language="js">
{`const builder = new IndexDefinitionBuilder("BlogPosts/ByTagsAndContent");
builder.map = \`docs.Posts.Select(post => new {     
    tags = post.tags,     
    content = post.content 
})\`; 

builder.indexesStrings["content"] = "Search";
builder.termVectorsStrings["content"] = "WithPositionsAndOffsets";

const indexDefinition = builder.toIndexDefinition(store.conventions);

await store.maintenance.send(new PutIndexesOperation(indexDefinition));
`}
</CodeBlock>
</TabItem>
</Tabs>

The available Term Vector options are:

| Term Vector | |
| ----------- | - |
| `"No"` | Do not store term vectors |
| `"Yes"` | Store the term vectors of each document. A term vector is a list of the document's terms and their number of occurrences in that document. |
| `"WithPositions"` | Store the term vector + token position information |
| `"WithOffsets"` | Store the term vector + token offset information |
| `"WithPositionsAndOffsets"` | Store the term vector + token position and offset information |


</LanguageContent>
<LanguageContent language="csharp">

<Admonition type="note" title="Note">

* A [Term Vector](https://en.wikipedia.org/wiki/Vector_space_model) is a representation of a text document 
  as a vector of identifiers.  
  Lucene indexes can contain term vectors for documents they index.  
* Term vectors can be used for various purposes, including similarity searches, information filtering 
  and retrieval, and indexing.  
  A book's index, for example, may have term vector enabled on the book's **subject** field, to be able 
  to use this field to search for books with similar subjects.  
* RavenDB features like [MoreLikeThis](../client-api/session/querying/how-to-use-morelikethis.mdx) leverage 
  stored term vectors to accomplish their goals.

* In this page:
   * [Creating an index and enabling Term Vectors on a field](../indexes/using-term-vectors.mdx#creating-an-index-and-enabling-term-vectors-on-a-field)
       * [Using the API](../indexes/using-term-vectors.mdx#using-the-api)  
       * [Using Studio](../indexes/using-term-vectors.mdx#using-studio)

</Admonition>
## Creating an index and enabling Term Vectors on a field

Indexes that include term vectors can be created and configured using the API 
or Studio.  

## Using the API 

To create an index and enable Term Vectors on a specific field,  we can -  

A. Create an index using  the `AbstractIndexCreationTask`, and specify the term vectors there.  
B. Or, we can define our term vectors in the `IndexDefinition` (directly or using the `IndexDefinitionBuilder`).  

<Tabs groupId='languageSyntax'>
<TabItem value="AbstractIndexCreationTask" label="AbstractIndexCreationTask">
<CodeBlock language="csharp">
{`public class BlogPosts_ByTagsAndContent : AbstractIndexCreationTask<BlogPost>
{
    public BlogPosts_ByTagsAndContent()
    {
        Map = users => from doc in users
                       select new
                       {
                           doc.Tags,
                           doc.Content
                       };

        Indexes.Add(x => x.Content, FieldIndexing.Search);
        TermVectors.Add(x => x.Content, FieldTermVector.WithPositionsAndOffsets);
    }
}
`}
</CodeBlock>
</TabItem>
<TabItem value="Operation" label="Operation">
<CodeBlock language="csharp">
{`IndexDefinitionBuilder<BlogPost> indexDefinitionBuilder =
    new IndexDefinitionBuilder<BlogPost>("BlogPosts/ByTagsAndContent")
    {
        Map = users => from doc in users
                       select new
                       {
                           doc.Tags,
                           doc.Content
                       },
        Indexes =
        {
            { x => x.Content, FieldIndexing.Search }
        },
        TermVectors =
        {
            { x => x.Content, FieldTermVector.WithPositionsAndOffsets }
        }
    };

IndexDefinition indexDefinition = indexDefinitionBuilder
    .ToIndexDefinition(store.Conventions);

store.Maintenance.Send(new PutIndexesOperation(indexDefinition));
`}
</CodeBlock>
</TabItem>
</Tabs>

Available Term Vector options include:

<TabItem value="term_vectors_3" label="term_vectors_3">
<CodeBlock language="csharp">
{`public enum FieldTermVector
\{
    /// <summary>
    /// Do not store term vectors
    /// </summary>
    No,

    /// <summary>
    /// Store the term vectors of each document. A term vector is a list of the document's
    /// terms and their number of occurrences in that document.
    /// </summary>
    Yes,

    /// <summary>
    /// Store the term vector + token position information
    /// </summary>
    WithPositions,

    /// <summary>
    /// Store the term vector + Token offset information
    /// </summary>
    WithOffsets,

    /// <summary>
    /// Store the term vector + Token position and offset information
    /// </summary>
    WithPositionsAndOffsets
\}
`}
</CodeBlock>
</TabItem>

Learn which Lucene API methods and constants are available [here](https://lucene.apache.org/core/3_6_2/api/all/org/apache/lucene/document/Field.TermVector.html).

## Using Studio

Let's use as an example one of Studio's sample indexes, `Product/Search`, that has term vector 
enabled on its `Name` field so a feature like [MoreLikeThis](../client-api/session/querying/how-to-use-morelikethis.mdx) 
can use this fiels to select a product and find products similar to it.  

![Term vector enabled on index field](./assets/term-vector-enabled.png)

We can now use a query like:

<TabItem value="sql" label="sql">
<CodeBlock language="sql">
{`from index 'Product/Search' 
where morelikethis(id() = 'products/7-A')
`}
</CodeBlock>
</TabItem>




</LanguageContent>

<!---
### Indexes
- [Boosting](../indexes/boosting)
- [Analyzers](../indexes/using-analyzers)
- [Storing Data in Index](../indexes/storing-data-in-index)
- [Dynamic Fields](../indexes/using-dynamic-fields)


-->